// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layer component should delete on delete button click 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-3 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-6 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-7 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-7:hover {
  color: black;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-10 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<body
    class="emotion-0"
  >
    <div
      id="fluent-default-layer-host"
      style="position: fixed; z-index: 1000000;"
    >
      <div
        class="ms-Layer ms-Layer--fixed root-172"
        data-portal-element="true"
      >
        <div
          class="ms-Fabric ms-Layer-content content-174"
        >
          <div
            aria-modal="true"
            class=""
            role="dialog"
            style="outline: none;"
          >
            <div
              aria-hidden="false"
              class="ms-Panel is-open ms-Panel--hasCloseButton root-160"
            >
              <div
                class="ms-Overlay overlay-176"
              />
              <div
                class="ms-Panel-main main-162"
              >
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
                <div
                  class="ms-Panel-contentInner contentInner-165"
                >
                  <div
                    class="ms-Panel-scrollableContent scrollableContent-168"
                    data-is-scrollable="true"
                  >
                    <div
                      class="ms-Panel-commands commands-163"
                      data-is-visible="true"
                    >
                      <div
                        class="ms-Panel-navigation navigation-164"
                      >
                        <button
                          aria-label="Close"
                          class="ms-Button ms-Panel-closeButton ms-PanelAction-close ms-Button--icon root-177"
                          data-is-focusable="true"
                          data-is-visible="true"
                          title="Close"
                          type="button"
                        >
                          <span
                            class="ms-Button-flexContainer flexContainer-144"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden="true"
                              class="ms-Icon root-105 emotion-1 ms-Button-icon icon-146"
                              data-icon-name="Cancel"
                              style="font-family: \\"FabricMDL2Icons\\";"
                            >
                              
                            </i>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ms-Panel-content content-169"
                    >
                      <div
                        class="dropdownItemsWrapper-128"
                        tabindex="0"
                      >
                        <div
                          aria-multiselectable="true"
                          class="ms-FocusZone emotion-2 ms-Dropdown-items dropdownItems-129"
                          data-focuszone-id="FocusZone65"
                          id="Dropdown38-list"
                          role="listbox"
                        >
                          <div
                            class="ms-Checkbox is-enabled ms-Dropdown-item is-multi-select dropdownItem-179"
                          >
                            <input
                              aria-posinset="1"
                              aria-selected="false"
                              aria-setsize="2"
                              class="input-180"
                              data-index="0"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown38-list0"
                              role="option"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-181"
                              for="Dropdown38-list0"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-182"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-185"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                layer31
                              </span>
                            </label>
                          </div>
                          <div
                            class="ms-Checkbox is-checked is-enabled ms-Dropdown-item is-multi-select dropdownItemSelected-187"
                          >
                            <input
                              aria-posinset="2"
                              aria-selected="true"
                              aria-setsize="2"
                              checked=""
                              class="input-180"
                              data-index="1"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown38-list1"
                              role="option"
                              tabindex="-1"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-181"
                              for="Dropdown38-list1"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-188"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-190"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                layer32
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <div
            class="ms-TextField emotion-5 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField33"
                  placeholder=""
                  type="text"
                  value="int"
                />
              </div>
            </div>
          </div>
          <div
            aria-owns="Dropdown38-list"
            class="ms-Dropdown-container root-121"
          >
            <div
              aria-controls="Dropdown38-list"
              aria-expanded="true"
              aria-haspopup="listbox"
              class="ms-Dropdown is-open dropdown-156"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown38"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-186"
                id="Dropdown38-option"
              >
                layer32
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
            <span
              class="ms-layer"
            />
          </div>
          <div
            class="emotion-6"
          >
            <button
              aria-label="delete.layer"
              class="ms-Button ms-Button--icon emotion-7 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.layer"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-8 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-10 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField42"
                  placeholder=""
                  type="text"
                  value="prop1"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown47"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown47-option"
              >
                textLayer11
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-6"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-7 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-8 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-9"
        >
          <div
            class="ms-TextField emotion-10 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField51"
                  placeholder=""
                  type="text"
                  value="prop2"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown56"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown56-option"
              >
                textLayer12
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-6"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-7 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-8 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-3 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-4 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4:hover {
  color: black;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-7 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<div
    aria-hidden="true"
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="ms-TextField emotion-2 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField33"
                placeholder=""
                type="text"
                value="int"
              />
            </div>
          </div>
        </div>
        <div
          aria-owns="Dropdown38-list"
          class="ms-Dropdown-container root-121"
        >
          <div
            aria-controls="Dropdown38-list"
            aria-expanded="true"
            aria-haspopup="listbox"
            class="ms-Dropdown is-open dropdown-156"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown38"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-186"
              id="Dropdown38-option"
            >
              layer32
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
          <span
            class="ms-layer"
          />
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.layer"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.layer"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField42"
                placeholder=""
                type="text"
                value="prop1"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown47"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown47-option"
            >
              textLayer11
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField51"
                placeholder=""
                type="text"
                value="prop2"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown56"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown56-option"
            >
              textLayer12
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Layer component should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-4 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-5 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-5:hover {
  color: black;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-8 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<body
    class="emotion-0"
  >
    <div
      aria-hidden="true"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            class="ms-TextField emotion-3 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-111"
              >
                <input
                  aria-describedby="TextFieldDescription1"
                  aria-invalid="true"
                  class="ms-TextField-field field-112"
                  id="TextField0"
                  placeholder=""
                  type="text"
                  value="base layer"
                />
              </div>
            </div>
            <span
              id="TextFieldDescription1"
            >
              <div
                role="alert"
              />
            </span>
          </div>
          <div
            aria-owns="Dropdown5-list"
            class="ms-Dropdown-container root-121"
          >
            <div
              aria-controls="Dropdown5-list"
              aria-expanded="true"
              aria-haspopup="listbox"
              class="ms-Dropdown is-open dropdown-156"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown5"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-157"
                id="Dropdown5-option"
              >
                select.layers
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
            <span
              class="ms-layer"
            />
          </div>
          <div
            class="emotion-4"
          >
            <button
              aria-label="delete.layer"
              class="ms-Button ms-Button--icon emotion-5 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.layer"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-6 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="ms-TextField emotion-8 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField9"
                  placeholder=""
                  type="text"
                  value="prop1"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown14"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown14-option"
              >
                textLayer11
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-4"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-5 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-6 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-7"
        >
          <div
            class="ms-TextField emotion-8 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField18"
                  placeholder=""
                  type="text"
                  value="prop2"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown23"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown23-option"
              >
                textLayer12
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-4"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-5 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-6 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      id="fluent-default-layer-host"
      style="position: fixed; z-index: 1000000;"
    >
      <div
        class="ms-Layer ms-Layer--fixed root-172"
        data-portal-element="true"
      >
        <div
          class="ms-Fabric ms-Layer-content content-174"
        >
          <div
            aria-modal="true"
            class=""
            role="dialog"
            style="outline: none;"
          >
            <div
              aria-hidden="false"
              class="ms-Panel is-open ms-Panel--hasCloseButton root-160"
            >
              <div
                class="ms-Overlay overlay-176"
              />
              <div
                class="ms-Panel-main main-162"
              >
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
                <div
                  class="ms-Panel-contentInner contentInner-165"
                >
                  <div
                    class="ms-Panel-scrollableContent scrollableContent-168"
                    data-is-scrollable="true"
                  >
                    <div
                      class="ms-Panel-commands commands-163"
                      data-is-visible="true"
                    >
                      <div
                        class="ms-Panel-navigation navigation-164"
                      >
                        <button
                          aria-label="Close"
                          class="ms-Button ms-Panel-closeButton ms-PanelAction-close ms-Button--icon root-177"
                          data-is-focusable="true"
                          data-is-visible="true"
                          title="Close"
                          type="button"
                        >
                          <span
                            class="ms-Button-flexContainer flexContainer-144"
                            data-automationid="splitbuttonprimary"
                          >
                            <i
                              aria-hidden="true"
                              class="ms-Icon root-105 emotion-17 ms-Button-icon icon-146"
                              data-icon-name="Cancel"
                              style="font-family: \\"FabricMDL2Icons\\";"
                            >
                              
                            </i>
                          </span>
                        </button>
                      </div>
                    </div>
                    <div
                      class="ms-Panel-content content-169"
                    >
                      <div
                        class="dropdownItemsWrapper-128"
                        tabindex="0"
                      >
                        <div
                          aria-multiselectable="true"
                          class="ms-FocusZone emotion-18 ms-Dropdown-items dropdownItems-129"
                          data-focuszone-id="FocusZone32"
                          id="Dropdown5-list"
                          role="listbox"
                        >
                          <div
                            class="ms-Checkbox is-enabled ms-Dropdown-item is-multi-select dropdownItem-179"
                          >
                            <input
                              aria-posinset="1"
                              aria-selected="false"
                              aria-setsize="2"
                              class="input-180"
                              data-index="0"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown5-list0"
                              role="option"
                              tabindex="0"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-181"
                              for="Dropdown5-list0"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-182"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-185"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                layer31
                              </span>
                            </label>
                          </div>
                          <div
                            class="ms-Checkbox is-enabled ms-Dropdown-item is-multi-select dropdownItem-179"
                          >
                            <input
                              aria-posinset="2"
                              aria-selected="false"
                              aria-setsize="2"
                              class="input-180"
                              data-index="1"
                              data-is-focusable="true"
                              data-ktp-execute-target="true"
                              id="Dropdown5-list1"
                              role="option"
                              tabindex="-1"
                              type="checkbox"
                            />
                            <label
                              class="ms-Checkbox-label label-181"
                              for="Dropdown5-list1"
                            >
                              <div
                                class="ms-Checkbox-checkbox checkbox-182"
                                data-ktp-target="true"
                              >
                                <i
                                  aria-hidden="true"
                                  class="ms-Checkbox-checkmark checkmark-185"
                                  data-icon-name="CheckMark"
                                >
                                  
                                </i>
                              </div>
                              <span
                                class="ms-Dropdown-optionText dropdownOptionText-137"
                              >
                                layer32
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  data-is-focus-trap-zone-bumper="true"
                  data-is-visible="true"
                  style="pointer-events: none; position: fixed;"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-3 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-4 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4:hover {
  color: black;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-7 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<div
    aria-hidden="true"
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="ms-TextField emotion-2 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-111"
            >
              <input
                aria-describedby="TextFieldDescription1"
                aria-invalid="true"
                class="ms-TextField-field field-112"
                id="TextField0"
                placeholder=""
                type="text"
                value="base layer"
              />
            </div>
          </div>
          <span
            id="TextFieldDescription1"
          >
            <div
              role="alert"
            />
          </span>
        </div>
        <div
          aria-owns="Dropdown5-list"
          class="ms-Dropdown-container root-121"
        >
          <div
            aria-controls="Dropdown5-list"
            aria-expanded="true"
            aria-haspopup="listbox"
            class="ms-Dropdown is-open dropdown-156"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown5"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-157"
              id="Dropdown5-option"
            >
              select.layers
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
          <span
            class="ms-layer"
          />
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.layer"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.layer"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField9"
                placeholder=""
                type="text"
                value="prop1"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown14"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown14-option"
            >
              textLayer11
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField18"
                placeholder=""
                type="text"
                value="prop2"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown23"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown23-option"
            >
              textLayer12
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Layer component should show error 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-3 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-4 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4:hover {
  color: black;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-7 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<body
    class=""
  >
    <div
      id="fluent-default-layer-host"
      style="position: fixed; z-index: 1000000;"
    />
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <div
            class="ms-TextField emotion-2 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-111"
              >
                <input
                  aria-describedby="TextFieldDescription67"
                  aria-invalid="true"
                  class="ms-TextField-field field-112"
                  id="TextField66"
                  placeholder=""
                  type="text"
                  value="base layer"
                />
              </div>
            </div>
            <span
              id="TextFieldDescription67"
            >
              <div
                role="alert"
              />
            </span>
          </div>
          <div
            class="ms-Dropdown-container root-121"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown71"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-123"
                id="Dropdown71-option"
              >
                select.layers
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <button
              aria-label="delete.layer"
              class="ms-Button ms-Button--icon emotion-4 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.layer"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="ms-TextField emotion-7 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField75"
                  placeholder=""
                  type="text"
                  value="prop1"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown80"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown80-option"
              >
                textLayer11
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-4 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
        <div
          class="emotion-6"
        >
          <div
            class="ms-TextField emotion-7 root-110"
          >
            <div
              class="ms-TextField-wrapper"
            >
              <div
                class="ms-TextField-fieldGroup fieldGroup-153"
              >
                <input
                  aria-invalid="false"
                  class="ms-TextField-field field-112"
                  id="TextField84"
                  placeholder=""
                  type="text"
                  value="prop2"
                />
              </div>
            </div>
          </div>
          <div
            class="ms-Dropdown-container root-154"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="ms-Dropdown dropdown-122"
              data-is-focusable="true"
              data-ktp-target="true"
              id="Dropdown89"
              role="combobox"
              tabindex="0"
            >
              <span
                aria-invalid="false"
                class="ms-Dropdown-title title-155"
                id="Dropdown89-option"
              >
                textLayer12
              </span>
              <span
                class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
              >
                <i
                  aria-hidden="true"
                  class="ms-Dropdown-caretDown caretDown-142"
                  data-icon-name="ChevronDown"
                >
                  
                </i>
              </span>
            </div>
          </div>
          <div
            class="emotion-3"
          >
            <button
              aria-label="delete.property"
              class="ms-Button ms-Button--icon emotion-4 root-143"
              data-is-focusable="true"
              data-testid="delete-icon"
              title="delete.property"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-144"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden="true"
                  class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                  data-icon-name="StatusCircleErrorX"
                  style="font-family: \\"FabricMDL2Icons-9\\";"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  width: 100%;
  border-top: 1px solid #bbb;
  padding: 1rem 0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  width: calc(50% - 1.5rem);
  margin-right: 1.25rem;
}

.emotion-3 {
  width: 1.5rem;
  margin-left: 0.25rem;
}

.emotion-4 {
  color: black;
  font-size: 0.813rem;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4:hover {
  color: black;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: calc(100% - 2rem);
  margin-top: 0.5rem;
  padding-left: 2rem;
}

.emotion-7 {
  width: calc(50% - 2.5rem);
  margin-right: 1.25rem;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="ms-TextField emotion-2 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-111"
            >
              <input
                aria-describedby="TextFieldDescription67"
                aria-invalid="true"
                class="ms-TextField-field field-112"
                id="TextField66"
                placeholder=""
                type="text"
                value="base layer"
              />
            </div>
          </div>
          <span
            id="TextFieldDescription67"
          >
            <div
              role="alert"
            />
          </span>
        </div>
        <div
          class="ms-Dropdown-container root-121"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown71"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-123"
              id="Dropdown71-option"
            >
              select.layers
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.layer"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.layer"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField75"
                placeholder=""
                type="text"
                value="prop1"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown80"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown80-option"
            >
              textLayer11
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="ms-TextField emotion-7 root-110"
        >
          <div
            class="ms-TextField-wrapper"
          >
            <div
              class="ms-TextField-fieldGroup fieldGroup-153"
            >
              <input
                aria-invalid="false"
                class="ms-TextField-field field-112"
                id="TextField84"
                placeholder=""
                type="text"
                value="prop2"
              />
            </div>
          </div>
        </div>
        <div
          class="ms-Dropdown-container root-154"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="ms-Dropdown dropdown-122"
            data-is-focusable="true"
            data-ktp-target="true"
            id="Dropdown89"
            role="combobox"
            tabindex="0"
          >
            <span
              aria-invalid="false"
              class="ms-Dropdown-title title-155"
              id="Dropdown89-option"
            >
              textLayer12
            </span>
            <span
              class="ms-Dropdown-caretDownWrapper caretDownWrapper-124"
            >
              <i
                aria-hidden="true"
                class="ms-Dropdown-caretDown caretDown-142"
                data-icon-name="ChevronDown"
              >
                
              </i>
            </span>
          </div>
        </div>
        <div
          class="emotion-3"
        >
          <button
            aria-label="delete.property"
            class="ms-Button ms-Button--icon emotion-4 root-143"
            data-is-focusable="true"
            data-testid="delete-icon"
            title="delete.property"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-144"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden="true"
                class="ms-Icon root-105 emotion-5 ms-Button-icon icon-146"
                data-icon-name="StatusCircleErrorX"
                style="font-family: \\"FabricMDL2Icons-9\\";"
              >
                
              </i>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
